--- a/FEWD/index.html
+++ b/FEWD/index.html
@@ -9,13 +9,13 @@
             <h1>Whack-a-Mole</h1>
             <div class="score" id="score">Score: 0</div>
             <div class="game-board">
-                <button class="mole-hole" id="hole1"></button>
-                <button class="mole-hole" id="hole2"></button>
-                <button class="mole-hole" id="hole3"></button>
+                <button class="mole-hole" id="hole1">🕳️</button>
+                <button class="mole-hole" id="hole2">🕳️</button>
+                <button class="mole-hole" id="hole3">🕳️</button>
             </div>
             <button class="restart-btn" id="restartBtn">Start Game</button>
             <div class="timer" id="timer">Time: 30</div>
         </div>
-        <script src="javascript.js"></script>
+        <script src="javascript.js" defer></script>
     </body>
 </html>
